--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 <body>
 
     <header>
-        <img src="C:\Users\süleyman\Desktop\ses kayded\site\WhatsApp Görsel 2025-11-05 saat 17.25.56_2a76dffb.jpg" alt="Süleyman Efe Gümüşgül" class="profile-img">
+        <img src="WhatsApp Görsel 2025-11-05 saat 17.25.56_2a76dffb.jpg" alt="Süleyman Efe Gümüşgül" class="profile-img">
         <h1>Süleyman Efe Gümüşgül</h1>
         <p class="subtitle">Full Stack Developer & Sporcu</p>
     </header>
@@ -502,11 +502,11 @@
             <h2 class="section-title">Sertifikalarım</h2>
             <div class="cards-container">
                 <div class="cert-card">
-                    <div class="cert-img-box"><img src="C:\Users\süleyman\Desktop\ses kayded\site\UC-00f3a6c7-0229-4e01-a9c7-db47d7e1b2ec.jpg" alt="Python Sertifikası"></div>
+                    <div class="cert-img-box"><img src="UC-00f3a6c7-0229-4e01-a9c7-db47d7e1b2ec.jpg" alt="Python Sertifikası"></div>
                     <div class="cert-content"><h3>İleri Seviye Python</h3><p class="institution">Udemy</p><p class="date">16 Ocak 2023</p></div>
                 </div>
                 <div class="cert-card">
-                    <div class="cert-img-box"><img src="C:\Users\süleyman\Desktop\ses kayded\site\lisans.jpg" alt="Spor Sertifikası"></div>
+                    <div class="cert-img-box"><img src="lisans.jpg" alt="Spor Sertifikası"></div>
                     <div class="cert-content"><h3>Fonksiyonel Antrenman</h3><p class="institution">Spor Federasyonu</p><p class="date">29 Eylül 2017</p></div>
                 </div>
                 <div class="cert-card">
@@ -538,4 +538,5 @@
     </div>
 
 </body>
+
 </html>
